--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@ body {
   <div class="media-grid">
     <div class="media-card">
       <div class="media-img">
-        <img src="Screenshot_20250710_163449_X.PNG" alt="Diff-Mamba Post by Tri Dao">
+        <img src="Screenshot_20250710_163449_X.png" alt="Diff-Mamba Post by Tri Dao">
       </div>
     </div>
   </div>
