--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@ body {
       <div class="hero-label">AI Researcher</div>
       <h1>Nadav <span>Schneider</span></h1>
       <div class="hero-bio">
-        I'm a Ph.D candidate in the Department of Electrical & Computer Engineering at Ben-Gurion University of the Negev. Supervised by Dr. Eliya Nachmani.
+        I'm a Ph.D candidate in the Department of <a href="https://in.bgu.ac.il/en/engn/ece/Pages/default.aspx" target="_blank">Electrical &amp; Computer Engineering</a> at <a href="https://www.bgu.ac.il/en/" target="_blank">Ben-Gurion University of the Negev</a>. Supervised by <a href="https://sites.google.com/view/eliya-nachmani/home" target="_blank">Dr. Eliya Nachmani</a>.
       </div>
       <div class="hero-links">
         <a href="#publications">
@@ -749,7 +749,7 @@ body {
     <h2 class="section-title">Contact</h2>
   </div>
   <div class="contact-grid">
-    <a href="mailto:nadavsc@post.bgu.ac.il" class="contact-link">
+    <a href="mailto:nadavsch@post.bgu.ac.il" class="contact-link">
       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
       Email
     </a>
