--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@ body {
   <div class="pub-item">
     <div class="pub-title"><a href="https://arxiv.org/pdf/2402.09126" target="_blank">MPIrigen: MPI Code Generation through Domain-Specific Language Models</a></div>
     <div class="pub-authors"><strong>N. Schneider</strong>, N. Hasabnis, VA. Vo, T. Kadosh, N. Krien, M. Capota, G. Tamir, Y. Pinter, G. Oren</div>
-    <div class="pub-venue">AI4Sys, 2024</div>
+    <div class="pub-venue">AI4Sys, HPDC, 2024</div>
   </div>
 
   <div class="pub-item">
