--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@ body {
   <div class="pub-item">
     <div class="pub-title"><a href="https://ml4physicalsciences.github.io/2024/files/NeurIPS_ML4PS_2024_19.pdf" target="_blank">CLARIPHY: Physics-Informed Image Deblurring with Transformers for Hydrodynamic Instability Analysis</a></div>
     <div class="pub-authors">S. Stamler-Grossman*, <strong>N. Schneider*</strong>, G. Hanoch, G. Oren (* equal contribution)</div>
-    <div class="pub-venue">ML4PS, NeurIPS 2024</div>
+    <div class="pub-venue">ML4PS, NeurIPS, 2024</div>
   </div>
 
   <div class="pub-item">
